Actualizacion Botones, Reportes, Ajustes de cashier y visual